eeepc-acpi-scripts (1.1) unstable; urgency=low

  [ Nico Golde ]
  * Uncomment show_brightness function in hotkey.sh as it uses a bashism and
    is not used by any script.
  * Start aosd_cat in the background and kill aosd_cat before each new call
    to avoid output that it is lagging behind on long key presses.
  * Adding Vcs-Browser and Vcs-Git control fields.
  * Prevent the system to go into suspend after a lid event if a shutdown
    is in progress (Closes: #469505).

 -- Nico Golde <nion@debian.org>  Sat, 01 Mar 2008 17:11:08 +0100

eeepc-acpi-scripts (1.0) unstable; urgency=low

  * Initial release (Closes: #466544).

 -- Nico Golde <nion@debian.org>  Tue, 19 Feb 2008 14:12:17 +0100
