@@ -1,5 +1,8 @@
 #!/bin/sh
 
+# do nothing if package is removed
+[ -d /usr/share/doc/eeepc-acpi-scripts ] || exit 0
+
 if (runlevel | grep -q [06]) || (ps x | grep -q '/sbin/shutdown'); then
     exit 0
 fi
